Add working navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 4 Project</title>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0 css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css" >
+    <link rel="stylesheet" href="css/style.css" >
+    <title>We are golden!</title>
   </head>
   <body>
-    lololo
+    <header>
+      <div class="bg-img">
+        <div class="container">
+            <div class="navigation">
+              <ul class = "nav-links">
+                <li><a href="#" class="logo">Golden</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
+            </div>
+       
+        <div class = "nav-p">
+          <p class = "medium-one">Welcome To Our Studio!</p>
+          <p class ="big-one">IT'S NICE TO MEET YOU</p>
+          <button>TELL ME MORE</button>
+        </div>
+      </div>
+    </div>
+      </div>
+    </header>
+    <section class = "section-services">
+      <div class = "container">
+      <div class="header-services"> 
+        <p> <span class="span-header-services">SERVICES </span></p>
+        <p> <span class="span-header-services-mini">Lorem ipsum dolor sit amet consectetur. </span></p>
+      </div>
+      
+    </div>
+    </section>
   </body>
 </html>
