Add section services

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div class="container">
             <div class="navigation">
               <ul class = "nav-links">
-                <li><a href="#" class="logo">Golden</a></li>
-                <li><a href="#">HOME</a></li>
+                <div class="logo1"><li><a href="#" class="logo">Golden</a></li></div>
+                <div class="a-links"><li><a href="#">HOME</a></li>
                 <li><a href="#">SERVICES</a></li>
                 <li><a href="#">PORTFOLIO</a></li>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">CONTACT</a></li></div>
               </ul>
             </div>
        
@@ -43,6 +43,11 @@
         <p> <span class="span-header-services-mini">Lorem ipsum dolor sit amet consectetur. </span></p>
       </div>
       
+      <div class = "offer">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
     </section>
   </body>
