Add icons and <p> to section services

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
       </div>
       
       <div class = "offer">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div> 
+          <i class="fa-solid fa-cart-plus"></i> 
+          <p>E-commerce</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
+        <div> 
+          <i class="fa-solid fa-laptop-arrow-down"></i>
+          <p>Responsive Web</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
+        <div> <i class="fa-light fa-lock-keyhole"></i> <p>Web Security</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
       </div>
     </div>
     </section>
