Add section portfolio

--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
       </div>
       
       <div class = "offer">
-        <div> 
+        <div class = "three-boxes"> 
           <i class="fa-solid fa-cart-plus"></i> 
-          <p>E-commerce</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
-        <div> 
+          <h1>E-commerce</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
+        <div class = "three-boxes"> 
           <i class="fa-solid fa-laptop-arrow-down"></i>
-          <p>Responsive Web</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
-        <div> <i class="fa-light fa-lock-keyhole"></i> <p>Web Security</p> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
+          <h1>Responsive Web</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
+        <div class = "three-boxes"> <i class="fa-light fa-lock-keyhole"></i> <h1>Web Security</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio qui aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
       </div>
     </div>
+    </section>
+    <section class = "portfolio">
+      <h2 class="span-header-services">OUR PORTFOLIO</h2>
+      
     </section>
   </body>
 </html>
