Add styles for portfolio section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
     </section>
     <section class = "portfolio">
       <div class="container">
-      <h2 class="span-header-services">OUR PORTFOLIO</h2>
+        <div class = "header-portfolio">
+      <h2 class="span-header-services">OUR PORTFOLIO</h2> 
+      <p class= "span-header-services-mini">Distinctio aspernatur minima libero.</p>
+    </div>
         <div class = "gallery">
           <div class="row">
             <div class="column">
@@ -63,34 +66,33 @@
               <h3>Ebony $ Ivory</h3>
               <p>Branding</p>
               </div>
-            </div>
+            
             <div class="column">
               <img src="https://images.pexels.com/photos/11139169/pexels-photo-11139169.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
               <h3>Smart Stationary</h3>
               <p>Print Design</p>
             </div>
             <div class="column">
-            <img src="https://images.pexels.com/photos/12366046/pexels-photo-12366046.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            <h3>Clever Poster</h3>
-            <p>Print Design</p>
+              <img src="https://images.pexels.com/photos/12366046/pexels-photo-12366046.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <h3>Clever Poster</h3>
+              <p>Print Design</p>
           </div>
         </div>
           <div class= "row">
             <div class="column">
-            <img src="https://images.pexels.com/photos/13428290/pexels-photo-13428290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            <h3>Vinyl Record</h3>
-            <p>Produck Mock-Up</p>
+              <img src="https://images.pexels.com/photos/13428290/pexels-photo-13428290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <h3>Vinyl Record</h3>
+              <p>Produck Mock-Up</p>
+            </div>
+            <div class="column">
+              <img src="https://images.pexels.com/photos/9060398/pexels-photo-9060398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <h3>Treehhouse Template</h3>
+              <p>Web Design</p>
           </div>
             <div class="column">
-            <img src="https://images.pexels.com/photos/9060398/pexels-photo-9060398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            <h3>Treehhouse Template</h3>
-            <p>Web Design</p>
-          </div>
-        </div>
-            <div class="column">
-            <img src="https://images.pexels.com/photos/15429533/pexels-photo-15429533.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
-            <h3>Burned Logo</h3>
-            <p>Branding</p>
+              <img src="https://images.pexels.com/photos/15429533/pexels-photo-15429533.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+              <h3>Burned Logo</h3>
+              <p>Branding</p>
           </div>
           </div>
         </div>
