--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css" >
     <link rel="stylesheet" href="css/style.css" >
-    <link rel="stylesheet" href="https://kit.fontawesome.com/8c9cae2247.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8c9cae2247.js" crossorigin="anonymous"></script>
     <title>We are golden!</title>
   </head>
   <body>
@@ -42,13 +42,13 @@
       </div>
       <div class = "offer">
         <div class = "three-boxes">
-          <i class="fa-regular fa-basket-shopping-simple"></i>
+          <i class="fa-solid fa-user"></i>
           <h1>E-commerce</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
         <div class = "three-boxes">
-          <i class="fa-solid fa-laptop-arrow-down"></i>
+          <i class="fa-solid fa-hippo"></i>
           <h1>Responsive Web</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
         <div class = "three-boxes">
-          <i class="fa-light fa-lock-keyhole"></i>
+          <i class="fa-solid fa-lock"></i>
            <h1>Web Security</h1> <p>Veniam adipisci, veritatis at dignissimos, distinctio aspernatur, minima libero fuga unde corrupti natus assumenda animi voluptatibus repudiandae.</p></div>
       </div>
     </div>
@@ -63,8 +63,9 @@
           <div class="row">
             <div class="column">
               <img src="https://images.pexels.com/photos/15780459/pexels-photo-15780459.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-              <h3>Ebony $ Ivory</h3>
+              <div class="photo-description"><h3>Ebony & Ivory</h3>
               <p>Branding</p>
+            </div>
               </div>
             
             <div class="column">
