--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>We are golden!</title>
   </head>
   <body>
+    <div class="black">
+      <div class = "main-content">
     <header>
       <div class="bg-img">
         <div class="container">
@@ -56,48 +58,59 @@
     <section class = "portfolio">
       <div class="container">
         <div class = "header-portfolio">
-      <h2 class="span-header-services">OUR PORTFOLIO</h2> 
+      <h2 class="span-header-services">OUR PORTFOLIO</h2>
       <p class= "span-header-services-mini">Distinctio aspernatur minima libero.</p>
     </div>
         <div class = "gallery">
           <div class="row">
             <div class="column">
-              <img src="https://images.pexels.com/photos/15780459/pexels-photo-15780459.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-              <div class="photo-description"><h3>Ebony & Ivory</h3>
+              <img src="https://images.pexels.com/photos/15780459/pexels-photo-15780459.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+              <div class="photo-description"><h3>Ebony Ivory</h3>
               <p>Branding</p>
             </div>
               </div>
-            
             <div class="column">
-              <img src="https://images.pexels.com/photos/11139169/pexels-photo-11139169.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <img src="https://images.pexels.com/photos/11139169/pexels-photo-11139169.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+              <div class="photo-description">
               <h3>Smart Stationary</h3>
               <p>Print Design</p>
             </div>
+          </div>
             <div class="column">
-              <img src="https://images.pexels.com/photos/12366046/pexels-photo-12366046.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <img src="https://images.pexels.com/photos/12366046/pexels-photo-12366046.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+              <div class="photo-description">
               <h3>Clever Poster</h3>
               <p>Print Design</p>
           </div>
         </div>
+        </div>
           <div class= "row">
             <div class="column">
-              <img src="https://images.pexels.com/photos/13428290/pexels-photo-13428290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <img src="https://images.pexels.com/photos/14072337/pexels-photo-14072337.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+              <div class="photo-description">
               <h3>Vinyl Record</h3>
               <p>Produck Mock-Up</p>
             </div>
+          </div>
             <div class="column">
-              <img src="https://images.pexels.com/photos/9060398/pexels-photo-9060398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <img src="https://images.pexels.com/photos/9060398/pexels-photo-9060398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+              <div class="photo-description">
               <h3>Treehhouse Template</h3>
               <p>Web Design</p>
           </div>
+        </div>
             <div class="column">
-              <img src="https://images.pexels.com/photos/15429533/pexels-photo-15429533.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+              <img src="https://images.pexels.com/photos/15429533/pexels-photo-15429533.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="image">
+              <div class="photo-description">
               <h3>Burned Logo</h3>
               <p>Branding</p>
           </div>
+        </div>
           </div>
         </div>
       </div>
     </section>
+  </div>
+  </div>
   </body>
 </html>
