Change class name for h2 and p in the portfolio section to header-portfolio-main and portfolio-not-main-p

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class = "section-services">
       <div class = "container">
       <div class="header-services">
-        <p> <span class="span-header-services">SERVICES </span></p>
-        <p> <span class="span-header-services-mini">Lorem ipsum dolor sit amet consectetur.</span></p>
+        <p> <span class="header-services-main">SERVICES </span></p>
+        <p> <span class="services-not-main-p">Lorem ipsum dolor sit amet consectetur.</span></p>
       </div>
       <div class = "offer">
         <div class = "three-boxes">
@@ -58,8 +58,8 @@
     <section class = "portfolio">
       <div class="container">
         <div class = "header-portfolio">
-      <h2 class="span-header-services">OUR PORTFOLIO</h2>
-      <p class= "span-header-services-mini">Distinctio aspernatur minima libero.</p>
+      <h2 class="header-portfolio-main">OUR PORTFOLIO</h2>
+      <p class= "portofolio-not-main-p">Distinctio aspernatur minima libero.</p>
     </div>
         <div class = "gallery">
           <div class="row">
