Change class name for h2 and p in the portfolio secion

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class = "container">
       <div class="header-services">
         <p> <span class="header-services-main">SERVICES </span></p>
-        <p> <span class="services-not-main-p">Lorem ipsum dolor sit amet consectetur.</span></p>
+        <p> <span class="services-description">Lorem ipsum dolor sit amet consectetur.</span></p>
       </div>
       <div class = "offer">
         <div class = "three-boxes">
@@ -59,7 +59,7 @@
       <div class="container">
         <div class = "header-portfolio">
       <h2 class="header-portfolio-main">OUR PORTFOLIO</h2>
-      <p class= "portofolio-not-main-p">Distinctio aspernatur minima libero.</p>
+      <p class= "portofolio-description">Distinctio aspernatur minima libero.</p>
     </div>
         <div class = "gallery">
           <div class="row">
