Change class names in the scss file so they will work with the html file

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             </div>
           </div>
             <div class="column">
+
               <img src="https://images.pexels.com/photos/12366046/pexels-photo-12366046.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
               <div class="photo-description">
               <h3>Clever Poster</h3>
@@ -106,6 +107,11 @@
         </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class = "footer">
+      <div class="container">
+
       </div>
     </section>
   </body>
