Add section footer

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </section>
     <section class = "footer">
       <div class="container">
-
+        <h5>© Copyright 2014 </h5>
       </div>
     </section>
   </body>
