--- a/index.html
+++ b/index.html
@@ -111,7 +111,15 @@
     </section>
     <section class = "footer">
       <div class="container">
-        <h5>© Copyright 2014 </h5>
+        <div class = "footer-description">
+          <h5>© Copyright 2014 FreebiesXpress.com</h5>
+            <div class = "footer-icons">
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-pinterest-p"></i>
+              <i class="fa-brands fa-google-plus"></i>
+            </div>
+        </div>
       </div>
     </section>
   </body>
