Add styles to icons to the foother section

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
           <h5>© Copyright 2014 FreebiesXpress.com</h5>
             <div class = "footer-icons">
               <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-facebook-f"></i>
               <i class="fa-brands fa-pinterest-p"></i>
-              <i class="fa-brands fa-google-plus"></i>
+              <i class="fa-brands fa-google-plus-g"></i>
             </div>
         </div>
       </div>
